style: Fix select dropdown width and colour to ensure visibility

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 /* Base */
 :root {
-  color-scheme: light dark;
+  color-scheme: light;
   --header-bg: #9b9b9b;
   --icon-size: 36px;
 }
